feat: expose suitable room availability
